--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,43 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="content" swipeEnabled="false">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+  
+    <ion-content class="background">
+        <div class = "icon">
+            <!-- <button class = "profilebutton" menuClose (click)="showConfirm()"> -->
+            <button class="profilebutton">
+              <img src = "assets/imgs/sampleLogo.png" alt ="picture mo to">
+            </button>
+        </div>
+        <div class = "name">
+            <h3> <strong> Admin </strong> </h3>
+        </div>
+        <div class = "buttons">
+           <ion-list>
+                <ion-item style="background-color: rgba(0,0,255,0.4); text-align:center;">
+                  Options
+                </ion-item>
+                <button ion-item>
+                  FAQ
+                </button>
+                <button ion-item>
+                  Search
+                </button>
+                <button menuClose ion-item (click)="showConfirm()">
+                  Logout
+                </button>
+           </ion-list>
+        </div>
+    </ion-content>
+  
+  </ion-menu>
+  
+
+
+
+
+
+<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
