--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,24 @@
 page-home {
+    #eyemg{
+        width: 60%;
+        margin: auto;
+        display: flex;
+        justify-content: center;
+    }
+    .card-title {
+        padding-top: 10px;
+        text-align: center;
+        font-size: 1.8em;
+        width: 100%;
+        font-weight: bold;
+        color: #000;
+      }
+    
+      .card-subtitle {
+        text-align:center;
+        font-size: 1.0em;
+        width: 100%;
+        color: #000;
+      }
 
 }
